# vneinteraction

./: .clang-tidy  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/workflows/: build-reusable.yml  ci.yml  codeql.yml  delete-merged-branch.yml  release-please.yml
cmake/: ProjectSetup.cmake  ProjectWarnings.cmake
configs/: config.h.in
docs/: README.md  doxyfile.in  third_person_follow_camera_future.md  vnetestbed_interaction_debug.md
docs/vertexnova/interaction/: interaction.md  review_and_roadmap.md
docs/vertexnova/interaction/diagrams/: class.drawio  component.drawio  context.drawio  runtime.drawio
docs/vertexnova/tasks_plan/: review_and_roadmap.md
docs/vertexnova/template/: template.md
docs/vertexnova/template/diagrams/: README.md
examples/: CMakeLists.txt  README.md  example_controller.cpp
examples/01_hello_template/: CMakeLists.txt  main.cpp
examples/01_library_info/: 01_example.cpp  01_example.h  CMakeLists.txt  README.md  main.cpp
examples/02_medical_3d_inspect/: 02_example.cpp  02_example.h  CMakeLists.txt  README.md  main.cpp
examples/02_orbit_manipulator/: CMakeLists.txt  main.cpp
examples/03_arcball_manipulator/: CMakeLists.txt  main.cpp
examples/03_medical_2d_slices/: 03_example.cpp  03_example.h  CMakeLists.txt  README.md  main.cpp
examples/04_fps_manipulator/: CMakeLists.txt  main.cpp
examples/04_game_editor_camera/: 04_example.cpp  04_example.h  CMakeLists.txt  README.md  main.cpp
examples/05_fly_manipulator/: CMakeLists.txt  main.cpp
examples/05_robotic_simulator/: 05_example.cpp  05_example.h  CMakeLists.txt  README.md  main.cpp
examples/06_custom_input_bindings/: 06_example.cpp  06_example.h  CMakeLists.txt  README.md  main.cpp
examples/06_ortho_pan_zoom_manipulator/: CMakeLists.txt  main.cpp
examples/07_camera_rig_composition/: 07_example.cpp  07_example.h  CMakeLists.txt  README.md  main.cpp
examples/07_follow_manipulator/: CMakeLists.txt  main.cpp
examples/08_camera_state_save_restore/: 08_example.cpp  08_example.h  CMakeLists.txt  README.md  main.cpp
examples/08_camera_system_controller/: CMakeLists.txt  main.cpp
examples/common/: input_simulation.h  key_codes.h  logging_guard.h
include/vertexnova/interaction/: angle_utils.h  arcball.h  arcball_manipulator.h  camera_action.h  camera_behavior.h  camera_behavior_base.h  camera_controller.h  camera_manipulator.h  camera_manipulator_base.h  camera_manipulator_factory.h  camera_rig.h  camera_state.h  camera_system_controller.h  euler_orbit.h  export.h  fly_manipulator.h  follow_behavior.h  follow_controller.h  follow_manipulator.h  fps_fly_manipulator.h  fps_manipulator.h  free_look_behavior.h  free_look_manipulator.h  input_binding.h  input_mapper.h  inspect_3d_controller.h  inspect_controller.h  interaction.h  interaction_types.h  navigate_controller.h  navigation_3d_controller.h  orbit_arcball_behavior.h  orbit_arcball_manipulator.h  orbit_behavior.h  orbit_manipulator.h  orbit_trackball_behavior.h  orbital_camera_behavior.h  orbital_camera_manipulator.h  ortho_2d_behavior.h  ortho_2d_controller.h  (+9 more)
include/vertexnova/interaction/detail/: camera_input_adapter.h  camera_manipulator_base.h  free_camera_base.h  orbit_style_base.h
include/vertexnova/scene/: camera_controller.h
include/vertexnova/scene/camera/: camera.h  camera_controller.h  orthographic_camera.h  perspective_camera.h
scripts/: README.md  build_linux.sh  build_macos.sh  build_windows.ps1  build_windows.py  build_windows.sh  clang_formatter.py  generate-docs.sh
src/: CMakeLists.txt
src/vertexnova/interaction/: arcball.cpp  arcball_manipulator.cpp  behavior_math.h  behavior_utils.cpp  behavior_utils.h  camera_behavior_base.cpp  camera_controller_context.h  camera_controller_impl.h  camera_input_adapter.cpp  camera_input_adapter.h  camera_manipulator_base.cpp  camera_manipulator_factory.cpp  camera_math.cpp  camera_math.h  camera_rig.cpp  camera_system_controller.cpp  controller_event_dispatch.cpp  controller_event_dispatch.h  euler_orbit.cpp  fly_manipulator.cpp  follow_behavior.cpp  follow_controller.cpp  follow_manipulator.cpp  fps_fly_manipulator.cpp  fps_manipulator.cpp  free_camera_base.cpp  free_look_behavior.cpp  free_look_behavior.h  free_look_manipulator.cpp  input_event_translator.cpp  input_event_translator.h  input_mapper.cpp  input_mapper.h  inspect_3d_controller.cpp  inspect_controller.cpp  interaction_utils.cpp  interaction_utils.h  manipulator_utils.cpp  manipulator_utils.h  navigate_controller.cpp  (+24 more)
src/vertexnova/interaction/detail/: euler_orbit_strategy.h  orbit_behavior.cpp  orbit_behavior.h  rotation_strategy.h  trackball_behavior.cpp  trackball_behavior.h  trackball_strategy.h
tests/: CMakeLists.txt  api_robustness_test.cpp  arcball_manipulator_test.cpp  arcball_test.cpp  behavior_regression_test.cpp  camera_manipulator_factory_test.cpp  camera_rig_test.cpp  camera_system_controller_test.cpp  controller_move_safety_test.cpp  euler_orbit_test.cpp  fly_manipulator_test.cpp  follow_behavior_test.cpp  follow_controller_test.cpp  follow_manipulator_test.cpp  fps_manipulator_test.cpp  free_look_behavior_test.cpp  free_look_manipulator_test.cpp  input_mapper_test.cpp  inspect_3d_controller_test.cpp  inspect_controller_test.cpp  interaction_test.cpp  main.cpp  manipulator_regression_test.cpp  navigate_controller_test.cpp  navigation_3d_controller_test.cpp  orbit_arcball_behavior_test.cpp  orbit_behavior_test.cpp  orbit_manipulator_test.cpp  orbit_trackball_behavior_test.cpp  orbital_camera_behavior_test.cpp  orbital_camera_manipulator_test.cpp  ortho_2d_behavior_test.cpp  ortho_2d_controller_test.cpp  ortho_2d_manipulator_test.cpp  ortho_pan_zoom_behavior_test.cpp  ortho_pan_zoom_manipulator_test.cpp  pan_zoom_behavior_test.cpp  planar_controller_test.cpp  test_interaction.cpp  track_behavior_test.cpp  (+3 more)
